--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
 
 <body>
   @include('partials/header.html')
-  <main class="main"></main>
+  @include('partials/hero.html')
+  @include('partials/about-section.html')
   @include('partials/footer.html')
   <!-- @include('html/h1.html') пример include -->
 </body>
